Fix horizontal scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,12 @@
 html,
+body {
+	overflow-x: hidden;
+}
+body {
+	position: relative;
+}
+
+html,
 body,
 #root,
 .App {
